--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
-    "pages/server/index",
     "pages/main/index",
-    "pages/information/information"
+    "pages/server/index",
+    "pages/information/information",
+    "pages/canvas/canvas"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
